--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -110,19 +110,21 @@ I have made the changes to the Eagle files and added them to the downloads. The 
 
 The second prototype (hardware v0.9) still didn't have the DC-DC converter spacing perfect, so there have been a couple of changes to the v1.0 board. But I am confident now that the 1.0 design is ready for release. You can find a zip file in the project downloads with the 1.0 .BRD and .SCH files for Eagle, along with a PDF schematic and the two DigiKey BOM files for ordering the parts.
 
-== Version 1.3 ==
+== Version 1.4 ==
+
+(note: version 1.3 had a layout error that shorted out the 5 volt power supply to ground. Fortunately, I don't think anyone but me actually has any of those).
 
 Since 1.0, ST Micro has deprecated the 2N2222 transistor. I've decided to replace it with a 2N4401, which despite being in a plastic case still has enough collector current to drive the relays with a large margin.
 
 Also, the Murata DC-DC converters went out-of-stock on DigiKey, so I've gone with CUI modules, which ironically enough require the 6 pin SIP layout of the original prototype.
 
-Version 1.3 is also the version that introduces the outgoing proximity circuitry.
+Version 1.4 is also the version that introduces the outgoing proximity circuitry.
 
 = How to =
 
 You will need:
 
-  # A circuit board from OSHPark. Currently, the 1.3 version board is recommended.
+  # A circuit board from OSHPark. Currently, the 1.4 version board is recommended.
   # An OpenEVSE RGB LCD backpack from the OpenEVSE store
   # The contents of the PCB BOM from DigiKey
   # The contents of the chassis BOM from DigiKey
@@ -196,4 +198,3 @@ The 0.9 board fully assembled.
   * [http://code.google.com/p/arduino-pwm-frequency-library PWM library]
   * [http://github.com/lincomatic/LiquidTWI2 LiquidTWI2 library]
   * [http://oshpark.com/profiles/nsayer OSHPark store for Hydra boards]
-  * [http://oshpark.com/shared_projects/q2unbCiP The Hydra OSHPark project, version 1.3]
