--- a/wiki/EVSimMark2.wiki
+++ b/wiki/EVSimMark2.wiki
@@ -14,6 +14,7 @@ You can download an Eagle board and schematic file from the project downloads. Y
   * If you do not want to use the i2c LCD display option, you can leave out the i2c connector, the power jack, LM7805 and C1 and C2. You will be relying on the FTDI cable to power the circuit from your computer.
   * If you do not want to use FTDI, then you can leave that connector off.
   * If you have some alternate means to program your ATTiny chip, you can leave out the ISP connector. If you do so, then you can replace R9, R10 and R11 with jumpers.
+  * If you have a pile of 16 MHz crystals laying around, then you can use one of them in place of the 20 MHz crystal specified in the project BOM. If you do, you'll need to modify the boards.txt fragment added by the "master.zip" file (see below) to specify a 16 MHz CPU clock rather than 20. You must pick a clock frequency compatible with SoftwareSerial - which supports only 8, 16 or 20 Mhz.
 
 For the sketch, you first need to configure the Arduino IDE to understand the ATTiny controllers. To do that, visit http://hlt.media.mit.edu/?p=1695 and download and install their ATTiny "master.zip" files. I also found that I needed to correct a bug in the AVR 'ld' command that came with Arduino. You need to fetch the patch at https://github.com/TCWORLD/ATTinyCore/tree/master/PCREL%20Patch%20for%20GCC and install it.
 
