--- a/wiki/EVSimMark2.wiki
+++ b/wiki/EVSimMark2.wiki
@@ -26,17 +26,23 @@ Set the Arduino IDE up for either an ATTiny85 20 MHz (if using the crystal) or 8
 
 Note that you cannot connect both the FTDI and i2c connectors at the same time. Both output mechanisms use the same controller pins. If the display is connected to the i2c connector, then it should be automatically detected and used at boot time. If you connect to the FTDI connector instead, you'll see a burst of line noise as the sketch starts, then you'll see the serial output take over after the i2c autodetection fails. Do not connect both at the same time. Also, although the sketch currently does not use the RD pin, you should connect it. The received data pin will serve to drag the SDA pin during the i2c autodetect phase and encourage it to fail.
 
-To use, connect either a power source (6 volts minimum) and LCD or an FTDI connector to the board. Flip all four DIP switches off. Connect the ground and pilot pins of the pilot connector up to the EVSE under test. Your EVSE should show no vehicle connected. The display should show 0 Hz and 0% duty cycle.
+To use, connect either a power source (6 volts minimum) and LCD or an FTDI connector to the board. Flip all four DIP switches off. Connect the ground and pilot pins of the pilot connector up to the EVSE under test. Your EVSE should show no vehicle connected. The display should show 0 Hz and a "+" indicating that the pilot is pinned high.
 
-Flip switch 4 (the one closest to the edge of the board) to "on". That should cause a transition to state "B". The EVSE should indicate a vehicle is connected. If it is prepared to supply energy, then you will see the display show 1000 Hz and a duty cycle and amp rating that's appropriate for the EVSE in question.
+Flip switch 4 (the one closest to the edge of the board) to "on". That should cause a transition to state "B". The EVSE should indicate a vehicle is connected. If it is prepared to supply energy, then you will see the display show 1000 Hz (+/- 20 Hz or so) and a duty cycle and amp rating that's appropriate for the EVSE in question. If your EVSE has a timer or a pause function, engaging either should result in a pinned (that is, 0 Hz) pilot.
 
-Flip switch 3 on to enter state "C". The EVSE will indicate that the vehicle has requested charging and should switch on the AC power. It goes without saying that at this point you must be extremely cautious as the two AC pins on the charge handle will be energized.
+Flip switch 3 on to enter state "C". The EVSE will indicate that the vehicle has requested charging and should switch on the AC power. It goes without saying that at this point you must be extremely cautious as the two AC pins on the charge handle will (or at least should) be energized.
 
 Flip switch 2 on to enter state "D". The EVSE will respond as appropriate for a ventilation request. Some EVSEs will error out, some will proceed without complaint. It depends.
 
 Note that switches 4 through 2 act cumulatively. For example, you should not turn off switch 4 as you turn on switch 3. It is invalid to have a lower numbered switch (except switch 1) turned on without all of the higher numbered switches also on.
 
 If you flip switch 1 on at any point, the EVSE should respond with a diode check failure and enter an error state.
+
+There are other tests you could attempt, but they involve manipulating the hot lines. Because of this, I cannot recommend attempting them unless you are an expert in dealing with high voltage electricity. For completeness, however, they include:
+
+  * Using a voltmeter to check the AC voltage between each hot line and ground, or between the two hot lines. For North America, you would expect to see 240 (or 208 if using 2 legs of 3 phase power) between the two hots and 120 between either hot and ground when using L2, or 120 between the two hots, 120 between one of the hots and ground and 0 between the other "hot" and ground (which hot is actually hot doesn't matter) if using L1. In Europe, I believe the expectation is that you should see the same as L1 in North America, but with 240 volts instead of 120.
+  * Using a 5 kilohm 5W resistor between a hot line and ground to simulate a ground fault. Your EVSE should, of course, immediately disconnect the power and enter an error state. The pilot should show 0 Hz and a "-" to indicate being pinned low (though pinned high is also reasonably acceptable).
+
 
 =Theory of Operation=
 
