Edited wiki page EVSimMark2 through web user interface.

--- a/wiki/EVSimMark2.wiki
+++ b/wiki/EVSimMark2.wiki
@@ -68,4 +68,4 @@ My portable EV tester setup in the car.
   * [https://github.com/lincomatic/LiquidTWI2 LiquidTWI2]
   * [https://github.com/nsayer/hydra/blob/master/EV_Sim.ino EV Sim Mark II sketch]
   * [https://code.google.com/p/open-evse/downloads/detail?name=EV_Sim.hex&can=2&q=#makechanges EV Sim Mark II firmware]
-  * [http://www.kfu.com/~nsayer/hydra/EV_Sim.pdf Schematic (PDF)]
+  * [http://www.kfu.com/~nsayer/hydra/EV_Sim_schematic.pdf Schematic (PDF)]
