--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -2,6 +2,11 @@
 
 
 =OpenEVSE PLUS - DIY Kit=
+The DIY OpenEVSE can but built from a kit avaliable at the OpenEVSE Store or from scratch by sourcing your own board from the source files and components.
+
+The kit is avaliable here:
+https://openevse-store.myshopify.com/products/diy-openevse-plus-v2
+ 
 http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8024_1024x1024.jpg?187
 
 =Reference=
